--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,7 +1,7 @@
 
 
 /*Area onde esta o Login*/
-.container {
+.login {
     width: 450px;
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px );
@@ -10,15 +10,28 @@
     border-radius: 50px;
 }
 
+/*Login*/
+.loginBackGround {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url("/src/assets/Jacarta-CIty.png");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+}
+
 /*Texto "Acesse o sistema"*/
-.container h1 {
+.login h1 {
     text-align: center;
     font-size: 30px;
     color: #ffffff;
+    text-shadow: #000 1px 1px;
 }
 
 /*Area onde se digita o email e a senha*/
-.container .input-field {
+.login .input-field {
     position: relative;
     width: 100%;
     height: 50px;
@@ -36,6 +49,7 @@
     font-size: 16px;
     color: #fff;
     padding: 20px 25px;
+    text-shadow: #000 1px 1px;
 }
 
 /*Textos padrao que ficam antes de digitar na senha e email*/
@@ -54,11 +68,12 @@
 }
 
 /*Posição entre esqueceu a senha e o lembrar de mim*/
-.container .recall-forget {
+.login .recall-forget {
     display: flex;
     justify-content: space-between;
     font-size: 15.5px;
     margin: -15px 0 15px;
+    text-shadow: #000 1px 1px;
 }
 
 /*Lembrar de mim*/
@@ -76,6 +91,7 @@
 .signup-link p a{
     color: #fff;
     text-decoration: none;
+    text-shadow: #000 1px 1px;
 }
 
 /*Volta o underline quando colocar o mouse*/
@@ -85,7 +101,7 @@
 }
 
 /*Configuração botão Entrar*/
-.container button{
+.login button {
     width: 100%;
     height: 50px;
     background-color: #fff;
@@ -97,10 +113,18 @@
     font-size: 16px;
     font-weight: 600;
     text-shadow: none;
+    transition: background-color 1.5s; 
+    /* Anima a mudança de cor suavemente*/
+}
+
+/* Mudança de cor ao passar o mouse */
+.login button:hover {
+    color: #fff;
+    background-color: #0d8102a8;
 }
 
 /*Localização do "não tem conta"*/
-.container .signup-link,
+.login .signup-link,
 .signup-link p {
     font-size: 17px;
     text-align: center;
