--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -10,7 +10,7 @@
     border-radius: 50px;
 }
 
-/*Login*/
+/*Login background*/
 .loginBackGround {
     display: flex;
     justify-content: center;
